# fold-at-scripps

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: final-review-fixes-report.md
0b/e8b899834e/: metadata.json
0c/c308c7ae43/: metadata.json
17/4bf4390e2c/: metadata.json
17/ac2031f501/: metadata.json
1b/5754ee7d1f/: metadata.json
1c/53a36733c6/: metadata.json
1e/282c5dc7d0/: metadata.json
20/28863a8a28/: metadata.json
27/2963e63a9c/: metadata.json
2c/9ccc346020/: metadata.json
2f/dc83601d5c/: metadata.json
3d/7b3924a699/: metadata.json
3e/cf97cd7aa0/: metadata.json
44/d6d82ee669/: metadata.json
48/b5dca3a389/: metadata.json
4a/9caf3487eb/: metadata.json
60/7fcd30952e/: metadata.json
66/602f5e82bb/: metadata.json
66/faa95318e4/: metadata.json
6f/b69e387ce4/: metadata.json
80/ab9fcfe46c/: metadata.json
83/f4d895e404/: metadata.json
84/aa7e36362c/: metadata.json
85/e0c5ce2fea/: metadata.json
8d/2684dc702b/: metadata.json
8d/3bae2a18c9/: metadata.json
95/168466089a/: metadata.json
96/407c130877/: metadata.json
9a/ab10939660/: metadata.json
9e/4ab4284f98/: metadata.json
a3/72ea159173/: metadata.json
b3/cf2eb7b7a3/: metadata.json
c6/83eacd333f/: metadata.json
ce/2663c71ea1/: metadata.json
d6/0c14de44e1/: metadata.json
deploy/: Caddyfile.example  fold-api.service  fold-scheduler.service  fold.env.example
deploy/systemd/: fold-api.service.tmpl  fold-scheduler.service.tmpl
docs/: ARCHITECTURE.md  DEPLOYMENT.md  VISION.md
e7/b93d3de431/: metadata.json
e9/3e69282db7/: metadata.json
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.environment.ts
frontend/e2e/: core-loop.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vitest.setup.ts
migrations/: env.py
migrations/versions/: 4ae9f1f0e12e_initial_schema.py  8134eced0fe3_initial_schema.py  8e1814737b0a_add_tool_metadata.py  a787a12a5023_add_quota_settings.py
src/fold_at_scripps/: __init__.py  audit.py  cli.py  db.py  (+8 more)
tests/: conftest.py  test_audit_service.py  test_autobio_executor.py  test_body_limit.py  test_cli.py  test_config.py  test_conftest_dburl.py  test_db.py  test_executor.py  test_lifespan.py  test_migrations.py  test_session_middleware.py  test_spa.py  test_startup_guard.py  test_storage.py  test_system_settings.py
(+356 files in other folders)
