[project]
name = "fold-at-scripps"
version = "0.1.0"
description = "Web front-end for running biological models via autobio."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pwdlib[argon2]>=0.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "itsdangerous>=2.2.0",
    "email-validator>=2.1",
    "typer>=0.12",
    "jsonschema>=4.21",
    "python-multipart>=0.0.9",
]

[project.scripts]
fold-admin = "fold_at_scripps.cli:main"
fold-scheduler = "fold_at_scripps.scheduler.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fold_at_scripps"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["fold_at_scripps"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Postgres database",
]
